--- a/helm_charts/icap/templates/services-template.yml
+++ b/helm_charts/icap/templates/services-template.yml
@@ -13,21 +13,31 @@ metadata:
   {{- end }}
 spec:
   ports:
+{{- if $component.ports.rest }}
     - name: "rest-port"
       port: {{ $component.ports.rest }}
       targetPort: {{ $component.ports.rest }}
+{{- end }}
+{{- if $component.ports.icap }}
     - name: "icap-port"
       port: {{ $component.ports.icap }}
       targetPort: {{ $component.ports.icap }}
+{{- end }}
+{{- if $component.ports.icaps }}
     - name: "icaps-port"
       port: {{ $component.ports.icaps }}
       targetPort: {{ $component.ports.icaps }}
+{{- end }}
+{{- if $component.ports.nginx }}
     - name: "nginx-port"
       port: {{ $component.ports.nginx }}
       targetPort: {{ $component.ports.nginx }}
+{{- end }}
+{{- if $component.ports.nginxs }}
     - name: "nginxs-port"
       port: {{ $component.ports.nginxs }}
       targetPort: {{ $component.ports.nginxs }}
+{{- end }}
   {{- if $component.service_type }}
   type: {{ $component.service_type }}
   {{- end }}
@@ -38,6 +48,6 @@ spec:
       app: {{ $component.name | quote }}
 status:
   loadBalancer: {}
-{{ end }}
+{{- end }}
 
-{{ end }}
+{{- end }}
