--- a/helm_charts/mdcore/templates/config-template.yml
+++ b/helm_charts/mdcore/templates/config-template.yml
@@ -311,3 +311,29 @@ data:
     {{- end }}
 
 
+---
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: activation-manager
+data:
+  monitor-activation.sh: |
+    #!/bin/bash
+
+    stop() {
+        echo 'Deactivating using activation server API'
+        curl -k -X GET "https://$ACTIVATION_SERVER/deactivation?key=$LICENSE_KEY&deployment=$DEPLOYMENT"
+        exit 0
+    }
+    trap stop TERM INT QUIT
+
+    until ! [[ -z "$DEPLOYMENT" ]]; do
+        echo 'Checking...'
+        export DEPLOYMENT=$(curl --silent -H "apikey: $APIKEY" "$MDCORE_BASE_URL:$REST_PORT/admin/license" | jq -r ".deployment")
+        echo "Deployment ID: $DEPLOYMENT"
+        sleep 1
+    done
+    echo "Waiting for termination signal..."
+    while true; do sleep 1; done
+    echo "MD Core pod finished, exiting"
+    exit 0
