--- a/helm_charts/icap/templates/deployments-template.yml
+++ b/helm_charts/icap/templates/deployments-template.yml
@@ -1,9 +1,7 @@
 # Create a deployment for each component in MD ICAP Server if it's enabled
-
-{{ range $component_name, $component := .Values.icap_components }}
-
-{{ $ENV := $component.env}}
-{{- if $component.import_configuration.enabled }}
+{{ $component := .Values.icap_components.md_icapsrv }}
+{{ $ENV := $component.env }}
+{{ if $component.import_configuration.enabled }}
 {{ $importTargets := dict "name" "IMPORT_CONF_FILE_TARGET" "value" (toJson $component.import_configuration.targets) }}
 {{ $ENV = append $component.env $importTargets}}
 {{- end }}
@@ -23,7 +21,7 @@ spec:
   selector:
     matchLabels:
       app: {{ $component.name | quote }}
-  {{- if $component.strategy}}
+  {{- if $component.strategy }}
   strategy:
     {{- toYaml $component.strategy | nindent 4 }}
   {{- end }}
@@ -35,15 +33,17 @@ spec:
           {{- toYaml $component.extra_labels | nindent 8 }}
         {{- end }}
     spec:
+      {{- if $.Values.nodeSelector }}
       nodeSelector:
-        {{- toYaml $.Values.nodeSelector | nindent 8}}
+        {{- toYaml $.Values.nodeSelector | nindent 8 }}
+      {{- end }}
       containers:
         - envFrom:
             - configMapRef:
                 name: mdicapsrv-env
-          {{ if $component.custom_repo -}}
-          image: {{ printf "%s/%s:%s" $.Values.icap_docker_repo $component.image $.Values.BRANCH | quote }}
-          {{- else -}}
+          {{- if $component.custom_repo }}
+          image: {{ printf "%s/%s:%s" $.Values.icap_docker_repo $component.image | quote }}
+          {{ else }}
           image: {{ $component.image | quote }}
           {{- end }}
           {{- if $ENV }}
@@ -61,17 +61,42 @@ spec:
             - containerPort: {{ $component.ports.nginxs }}
         {{- end }}
           {{- end }}
-          {{- if $component.livenessProbe}}
+          imagePullPolicy: {{ $component.imagePullPolicy }}
+          {{- if $.Values.healthcheck.enabled }}
+          {{- if $component.livenessProbe }}
           livenessProbe:
-            {{- toYaml $component.livenessProbe | nindent 12 }}
+            httpGet:
+              path: /readyz
+              port: {{ $component.ports.rest }}
+              {{- if $component.tls.https.enabled }}
+              scheme: HTTPS
+              {{- end }}
+            initialDelaySeconds: {{ $component.livenessProbe.initialDelaySeconds }}
+            periodSeconds: {{ $component.livenessProbe.periodSeconds }}
+            timeoutSeconds: {{ $component.livenessProbe.timeoutSeconds }}
+            failureThreshold: {{ $component.livenessProbe.failureThreshold }}
           {{- end }}
-          {{- if (or $component.mountConfig $component.tls.https.enabled $component.import_configuration.enabled $component.tls.icaps.enabled $component.tls.nginxs.enabled $component.persistentDir)}}
+          {{- if $component.readinessProbe }}
+          readinessProbe:
+            httpGet:
+              path: /readyz
+              port: {{ $component.ports.rest }}
+              {{- if $component.tls.https.enabled }}
+              scheme: HTTPS
+              {{- end }}
+            initialDelaySeconds: {{ $component.readinessProbe.initialDelaySeconds }}
+            periodSeconds: {{ $component.readinessProbe.periodSeconds }}
+            timeoutSeconds: {{ $component.readinessProbe.timeoutSeconds }}
+            failureThreshold: {{ $component.readinessProbe.failureThreshold }}
+          {{- end }}
+          {{- end }}
+          {{- if (or $component.mountConfig $component.persistentDir $component.tls.https.enabled $component.import_configuration.enabled $component.tls.icaps.enabled $component.tls.nginxs.enabled $.Values.storage_configs.enabled $component.trustCertificate.enabled)}}
           volumeMounts:
             {{- if $component.mountConfig }}
             - name: {{ $component.mountConfig.configName }}
               mountPath: {{ $component.mountConfig.mountPath }}
               subPath: {{ $component.mountConfig.subPath }}
-            {{ end }}
+            {{- end }}
             {{- if $component.tls.https.enabled }}
             - name: {{ $component.tls.https.certSecret }}
               mountPath: {{  $component.tls.https.mountPath }}/mdicapsrv-https.crt
@@ -79,7 +104,7 @@ spec:
             - name: {{ $component.tls.https.certKeySecret }}
               mountPath: {{ $component.tls.https.mountPath }}/mdicapsrv-https.key
               subPath: {{ $component.tls.https.certKeySecretSubPath }}
-            {{ end }}
+            {{- end }}
             {{- if $component.tls.icaps.enabled }}
             - name: {{ $component.tls.icaps.certSecret }}
               mountPath: {{  $component.tls.icaps.mountPath }}/mdicapsrv-icaps.crt
@@ -87,7 +112,7 @@ spec:
             - name: {{ $component.tls.icaps.certKeySecret }}
               mountPath: {{ $component.tls.icaps.mountPath }}/mdicapsrv-icaps.key
               subPath: {{ $component.tls.icaps.certKeySecretSubPath }}
-            {{ end }}
+            {{- end }}
             {{- if $component.tls.nginxs.enabled }}
             - name: {{ $component.tls.nginxs.certSecret }}
               mountPath: {{ $component.tls.nginxs.mountPath }}/mdicapsrv-nginxs.crt
@@ -95,19 +120,24 @@ spec:
             - name: {{ $component.tls.nginxs.certKeySecret }}
               mountPath: {{ $component.tls.nginxs.mountPath }}/mdicapsrv-nginxs.key
               subPath: {{ $component.tls.nginxs.certKeySecretSubPath }}
-            {{ end }}
+            {{- end }}
             {{- if $component.import_configuration.enabled }}
             - name: {{ $component.import_configuration.importConfigMap }}
               mountPath: {{ printf "%s/%s" $component.import_configuration.importConfigPath  $component.import_configuration.importConfigMapSubPath }}
               subPath: {{ $component.import_configuration.importConfigMapSubPath }}
-            {{ end }}
-            {{- if $component.persistentDir }}
-            - name: {{ $component.name }}
-              mountPath: {{ $component.persistentDir }}
-              {{- if not (eq $.Values.storage_provisioner "hostPath") }}
+            {{- end }}
+            {{- if $component.trustCertificate.enabled }}
+            {{- range $component.trustCertificate.configs }}
+            - name: {{ .certSecret }}
+              mountPath: {{printf "%s/%s" $component.trustCertificate.mountPath .certSecretSubPath }}
+              subPath: {{ .certSecretSubPath }}
+            {{- end }}
+            {{- end }}
+            {{- if $.Values.storage_configs.enabled }}
+            - mountPath: "/opt/mdicapsrv/icap_data/var/lib/mdicapsrv"
               subPath: {{ $component.name }}
-              {{- end }}
-            {{ end }}
+              name: {{ printf "%s-pvc" .Values.storage_configs.storageClassName }}
+            {{- end }}
           {{- end }}
           {{- if $component.resources }}
           resources:
@@ -116,22 +146,19 @@ spec:
           {{- if $component.sidecars }}
             {{- toYaml $component.sidecars | nindent 8 }}
           {{- end }}
-      {{- if $component.initContainers }}
+      {{- if ($component.initContainers)}}
+      {{- if (eq $component.database.db_mode "4")}}
       initContainers:
         {{- toYaml $component.initContainers | nindent 8 }}
+      {{- end }}
       {{- end }}
       restartPolicy: Always
       {{- if $.Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml $.Values.imagePullSecrets | nindent 8 }}
       {{- end }}
-      {{- if (or $component.mountConfig $component.tls.https.enabled $component.tls.icaps.enabled $component.tls.nginxs.enabled $component.import_configuration.enabled $component.persistentDir)}}
+      {{- if (or $component.tls.https.enabled $component.tls.icaps.enabled $component.tls.nginxs.enabled $component.import_configuration.enabled  $.Values.storage_configs.enabled $component.trustCertificate.enabled )}}
       volumes:
-        {{- if $component.mountConfig }}
-        - name: {{ $component.mountConfig.configName }}
-          configMap:
-            name: {{ $component.mountConfig.configName }}
-        {{ end }} 
         {{- if $component.tls.https.enabled }}
         - name: {{ $component.tls.https.certSecret }}
           secret:
@@ -139,7 +166,7 @@ spec:
         - name: {{ $component.tls.https.certKeySecret }}
           secret:
             secretName: {{ $component.tls.https.certKeySecret }}
-        {{ end }}
+        {{- end }}
         {{- if $component.tls.icaps.enabled }}
         - name: {{ $component.tls.icaps.certSecret }}
           secret:
@@ -147,12 +174,12 @@ spec:
         - name: {{ $component.tls.icaps.certKeySecret }}
           secret:
             secretName: {{ $component.tls.icaps.certKeySecret }}
-        {{ end }}
+        {{- end }}
         {{- if $component.import_configuration.enabled }}
         - name: {{ $component.import_configuration.importConfigMap }}
           configMap:
             name: {{ $component.import_configuration.importConfigMap }}
-        {{ end }}
+        {{- end }}
         {{- if $component.tls.nginxs.enabled }}
         - name: {{ $component.tls.nginxs.certSecret }}
           secret:
@@ -160,18 +187,17 @@ spec:
         - name: {{ $component.tls.nginxs.certKeySecret }}
           secret:
             secretName: {{ $component.tls.nginxs.certKeySecret }}
-        {{ end }}
-        {{- if $component.persistentDir }}
-        {{- if eq $.Values.storage_provisioner "hostPath" }}
-        - name: {{ $component.name }}
-          hostPath:
-            path: {{ printf "/%s/%s" $.Values.hostPathPrefix $component.name }}
-            type: DirectoryOrCreate
-        {{ else }}
-        - name: {{ $component.name }}
+        {{- end }}
+        {{- if $component.trustCertificate.enabled }}
+        {{- range $component.trustCertificate.configs }}
+        - name: {{ .certSecret }}
+          secret:
+            secretName: {{ .certSecret }}
+        {{- end }}
+        {{- end }}
+        {{- if $.Values.storage_configs.enabled }}
+        - name: {{ printf "%s-pvc" .Values.storage_configs.storageClassName }}
           persistentVolumeClaim:
-            claimName: {{ printf "%s-pvc" $.Values.storage_name }}
-        {{ end }}
-        {{ end }}
+            claimName: {{ printf "%s-pvc" .Values.storage_configs.storageClassName }}
+        {{- end }}
       {{- end }}
-{{ end }}
