--- a/helm_charts/mdcore/templates/deployments-template.yml
+++ b/helm_charts/mdcore/templates/deployments-template.yml
@@ -134,8 +134,11 @@ spec:
             claimName: {{ printf "%s" $.Values.storage_name }}
         {{ end }}
         {{ end }}
-        {{- if $component.extraVolumes }}
-          {{- toYaml $component.extraVolumes | nindent 8 }}
+        {{- if $component.extraVolumes -}}
+          {{- range $volumeLabel, $volume := $component.extraVolumes }}
+      -
+            {{- toYaml $volume | nindent 8 }}
+          {{- end }}
         {{- end }}
       {{- end }}
 {{ end }}
